2025-12-02T01:26:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19843477569 # 826
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-02
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 976 1456 / 978 1458
* notice: next accum: outdated-unq outdated-all / unq all: 977 1457 / 978 1458
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-17] / []

2025-11-25T01:24:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19655005437 # 819
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-25
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 976 1456 / 977 1457
* notice: next accum: outdated-unq outdated-all / unq all: 976 1456 / 978 1458
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-11-24]

2025-11-18T01:24:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19450592402 # 812
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-18
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 975 1455 / 976 1456
* notice: next accum: outdated-unq outdated-all / unq all: 976 1456 / 977 1457
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-11-03] / [2025-11-17]

2025-11-15T01:22:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19382162977 # 809